--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,5 @@ spring.application.name=demo
 server.port=8080
 spring.thymeleaf.cache=false
 spring.web.resources.cache.period=0
+spring.mvc.view.prefix=/
+spring.mvc.view.suffix=.html
